--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <form>
+      <label for="search">Search</label>
+      <input type="text" name="search" id="search" />
+    </form>
     Mr Avip Syaifulloh ST MT
   </body>
 </html>
