--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <input type="text" name="search" id="search" />
     </form>
     Mr Avip Syaifulloh ST MT
+    <script src="script.js"></script>
   </body>
 </html>
