--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <form>
       <label for="search">Search</label>
       <input type="text" name="search" id="search" />
+      <label for="filter">Mens</label>
+      <input type="checkbox" name="filer" id="filter" />
+      <label for="filter">Womens</label>
+      <input type="checkbox" name="filer" id="filter" />
     </form>
     Mr Avip Syaifulloh ST MT
     <script src="script.js"></script>
