--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <label for="search">Search</label>
       <input type="text" name="search" id="search" />
     </form>
-    Mr Avip Syaifulloh ST MT
+    <div>
+      <img src="https://via.placeholder.com/150" alt="image" />
+      <h1>Product 1</h1>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
